[metadata]
name = vmware-nsx-tempest
version = 0.0.1
summary = tempest test suites for project vmware-nsx
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Openstack Development Team
    Intended Audience :: Openstack QA Team
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[files]
packages =
    vmware_nsx_tempest

[entry_points]
tempest.test_plugins =
    vmware-nsx-tempest-plugin = vmware_nsx_tempest.plugin:VMwareNsxTempestPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vmware_nsx_tempest/locale
domain = vmware_nsx_tempest

[update_catalog]
domain = vmware_nsx_tempest
output_dir = vmware_nsx_tempest/locale
input_file = vmware_nsx_tempest/locale/vmware_nsx_tempest.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vmware_nsx_tempest/locale/vmware_nsx_tempest.pot
